tests/fixtures/negative/numeric_literals/005_bigint_exponent.js
// Expected error: bigint literals cannot contain an exponent.
const value = 1e1n;
